@@ -7,6 +7,8 @@ importMethodsFrom(AnnotationDbi, revmap, mget, exists, as.list)
 
 importClassesFrom(Biobase, ScalarCharacter, Versions)
 
+importClassesFrom(AnnotationDbi, AnnDbBimap)
+
 importClassesFrom(graph, graphNEL)
 
 exportClasses(## GeneIdentifierType
