@@ -22,6 +22,9 @@ NEW FEATURES
 
     o More extensive information in some 'show' methods
 
+    o Added a mapIdentifiers method to allow maps with user-supplied
+    AnnDbBimap objects
+
 BUG FIXES
 
     o A GeneSetCollection constructed with a named list could
